--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@
     <ul id="messages"></ul>
     <form action="">
       <input id="m" autocomplete="off" />
-      <input id="p" autocomplete="off" />
+      <!-- <input id="p" autocomplete="off" /> -->
       <button>Send</button>
     </form>
   </body>
